--- a/Lab1/Lab1/View/Controls/HorizontalListItem.xaml
+++ b/Lab1/Lab1/View/Controls/HorizontalListItem.xaml
@@ -16,7 +16,7 @@
                 <ColumnDefinition Width="auto"/>
             </Grid.ColumnDefinitions>
             <TextBlock Grid.Row="0"  Text="{Binding Path=Header}" TextWrapping="NoWrap" Style="{StaticResource CenteredText}"/>
-            <TextBox Grid.Row="1" Text="{Binding Path=Value}" TextWrapping="NoWrap"
+            <TextBox Grid.Row="1" Text="{Binding Path=Value}" TextWrapping="NoWrap" Name="text"  GotFocus="text_GotFocus" LostFocus="text_LostFocus"
                      HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="14" Margin="8" Padding="16,0"/>
     </Grid>
     </Border>
