--- a/Lab1/Lab1/View/Controls/HorizontalListItem.xaml
+++ b/Lab1/Lab1/View/Controls/HorizontalListItem.xaml
@@ -5,7 +5,9 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Lab1.View.Controls"
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
+             d:DesignHeight="300" d:DesignWidth="300"
+             >
+
     <Border BorderBrush="DarkGray" BorderThickness="1">
         <Grid>
             <Grid.RowDefinitions>
