--- a/Lab1/Lab1/View/Pages/Input.xaml
+++ b/Lab1/Lab1/View/Pages/Input.xaml
@@ -8,7 +8,6 @@
       xmlns:viewmodel="clr-namespace:Lab1.ViewModel"
       xmlns:global="clr-namespace:Lab1"
       xmlns:dataGrid2D="http://gu.se/DataGrid2D"
-      xmlns:view="clr-namespace:Lab1.View"
       mc:Ignorable="d" 
       d:DesignHeight="525" d:DesignWidth="525"
       Background="White"
@@ -16,27 +15,143 @@
     <Page.DataContext>
         <viewmodel:InputViewModel/>
     </Page.DataContext>
-    <ScrollViewer VerticalScrollBarVisibility="Auto">
-        <Grid Margin="8">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="auto"/>
-                <RowDefinition Height="auto"/>
-                <RowDefinition Height="*"/>
-            </Grid.RowDefinitions>
-
-
-            <ScrollViewer Grid.Row="0"
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="auto"/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+        <control:MenuControl Grid.Row="0" />
+        <ScrollViewer Grid.Row="1" VerticalScrollBarVisibility="Auto">
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition Height="auto"/>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition/>
+                </Grid.ColumnDefinitions>
+                <Grid Grid.Row="0" Margin="8">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="auto"/>
+                        <RowDefinition/>
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition />
+                        <ColumnDefinition Width="auto"/>
+                        <ColumnDefinition Width="auto"/>
+                        <ColumnDefinition />
+                    </Grid.ColumnDefinitions>
+                    <TextBlock Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="4" Text="Сировина" Margin="8,8,8,0"
+                       Style="{StaticResource CenteredText}"/>
+                    <Border Grid.Column="1" Grid.Row="1" BorderBrush="DarkGray" BorderThickness="1">
+                        <Grid>
+                            <Grid.RowDefinitions>
+                                <RowDefinition/>
+                                <RowDefinition/>
+                            </Grid.RowDefinitions>
+                            <TextBlock Grid.Row="0"  Text="Назва" Style="{StaticResource CenteredText}"/>
+                            <TextBlock Grid.Row="1" Text="Надходження" Style="{StaticResource CenteredText}"/>
+                        </Grid>
+                    </Border>
+                    <ScrollViewer Grid.Column="2" Grid.Row="1" Width="auto"
                               VerticalScrollBarVisibility="Disabled" HorizontalScrollBarVisibility="Auto">
-                
-                <view:LPInputTable x:Name="InputTable" 
-                                       Coefs="{Binding Coefs, Mode=TwoWay}"
-                                       LimitNames="{Binding LimitNames, Mode=TwoWay}"
-                                       VarNames="{Binding VarNames, Mode=TwoWay}"
-                                       LimitValues="{Binding Limits, Mode=TwoWay}"
-                                       VarValues="{Binding Vars, Mode=TwoWay}"/>
-            </ScrollViewer>
-            <Button Content="Звести до канонічної форми" Grid.Row="1"
+                        <ListView ItemsSource="{Binding Raw}" Width="auto">
+                            <ListView.ItemsPanel>
+                                <ItemsPanelTemplate>
+                                    <StackPanel Orientation="Horizontal" />
+                                </ItemsPanelTemplate>
+                            </ListView.ItemsPanel>
+                            <ListBox.ItemTemplate>
+                                <DataTemplate>
+                                    <control:HorizontalListItem/>
+                                </DataTemplate>
+                            </ListBox.ItemTemplate>
+                            <ListView.ItemContainerStyle>
+                                <Style>
+                                    <Setter Property="ListBoxItem.Margin" Value="0"/>
+                                    <Setter Property="ListBoxItem.Padding" Value="0"/>
+                                </Style>
+                            </ListView.ItemContainerStyle>
+                        </ListView>
+                    </ScrollViewer>
+
+                </Grid>
+                <Grid Grid.Row="1" Margin="8">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="auto"/>
+                        <RowDefinition/>
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition/>
+                        <ColumnDefinition Width="auto"/>
+                        <ColumnDefinition Width="auto"/>
+                        <ColumnDefinition/>
+                    </Grid.ColumnDefinitions>
+                    <TextBlock Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="4" Text="Вироби" Margin="8,8,8,0"
+                       Style="{StaticResource CenteredText}"/>
+                    <Border Grid.Column="1" Grid.Row="1" BorderBrush="DarkGray" BorderThickness="1">
+                        <Grid>
+                            <Grid.RowDefinitions>
+                                <RowDefinition/>
+                                <RowDefinition/>
+                            </Grid.RowDefinitions>
+                            <TextBlock Grid.Row="0"  Text="Назва" Style="{StaticResource CenteredText}"/>
+                            <TextBlock Grid.Row="1" Text="Прибуток" Style="{StaticResource CenteredText}"/>
+                        </Grid>
+                    </Border>
+                    <ScrollViewer Grid.Column="2" Grid.Row="1"
+                              VerticalScrollBarVisibility="Disabled" HorizontalScrollBarVisibility="Auto">
+                        <ListView ItemsSource="{Binding Products}">
+                            <ListView.ItemsPanel>
+                                <ItemsPanelTemplate>
+                                    <StackPanel Orientation="Horizontal" />
+                                </ItemsPanelTemplate>
+                            </ListView.ItemsPanel>
+                            <ListBox.ItemTemplate>
+                                <DataTemplate>
+                                    <control:HorizontalListItem/>
+                                </DataTemplate>
+                            </ListBox.ItemTemplate>
+                            <ListView.ItemContainerStyle>
+                                <Style>
+                                    <Setter Property="ListBoxItem.Margin" Value="0"/>
+                                    <Setter Property="ListBoxItem.Padding" Value="0"/>
+                                </Style>
+                            </ListView.ItemContainerStyle>
+                        </ListView>
+                    </ScrollViewer>
+
+                </Grid>
+                <Grid Grid.Row="2">
+                    <Grid.ColumnDefinitions>
+                            <ColumnDefinition/>
+                        </Grid.ColumnDefinitions>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="auto"/>
+                            <RowDefinition/>
+                        </Grid.RowDefinitions>
+                        <TextBlock Grid.Row="0" Text="Витрати сировини на одиницю кожного виробу" Style="{StaticResource CenteredText}" Margin="8,8,8,0"/>
+                        <DataGrid Grid.Row="1" Name="matrix" dataGrid2D:ItemsSource.RowsSource="{Binding ProductCost}" CellEditEnding="matrix_CellEditEnding" BeginningEdit="matrix_BeginningEdit"
+                          dataGrid2D:ItemsSource.ColumnHeadersSource="{Binding ProductNames}"
+                          dataGrid2D:ItemsSource.RowHeadersSource="{Binding RawNames}"
+                          HorizontalAlignment="Center" VerticalAlignment="Center"
+                          CanUserAddRows="False" CanUserDeleteRows="False" CanUserReorderColumns="False" CanUserResizeColumns="False"
+                                  CanUserResizeRows="False" CanUserSortColumns="False"/>
+                    </Grid>
+                <Grid Grid.Row="3">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition/>
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="auto"/>
+                        <RowDefinition/>
+                    </Grid.RowDefinitions>
+                    <Button Content="Звести до канонічної форми"
                             Margin="8,32,8,8" Padding="8" FontSize="14" HorizontalAlignment="Center" Click="Button_Click"/>
-        </Grid>
-    </ScrollViewer>
+                </Grid>
+            </Grid>
+        </ScrollViewer>
+    </Grid>
 </Page>
